Fixed the navbar width causing horizontal scroll after loading data.

--- a/src/components/navBar/navBar.module.scss
+++ b/src/components/navBar/navBar.module.scss
@@ -1,5 +1,5 @@
 .navBar {
-  width: 100vw;
+  width: 100%;
   background-color: #1d1283;  
 }
 
